# pinchguard-mess

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  package-lock.json  pyproject.toml
.data/: loop_records.jsonl
.data/activations/: a6ce3a74-c8a5-4886-bde6-68116e7c3026.npz  ca30f981-816c-48e6-82ec-6de53c6cf53b.npz  d2f6d07b-1c09-40e4-98bb-61988b8ec9b5.npz
.data/scenario_08_baseline_run01/: loop_records.jsonl
.data/scenario_08_baseline_run02/: comments_dryrun.jsonl  loop_records.jsonl
.data/scenario_08_treatment_run00/: comments_dryrun.jsonl  traces.jsonl
.data/scenario_08_treatment_run01/: traces.jsonl
.data/scenario_08_treatment_run02/: traces.jsonl
.github/workflows/: ci.yml
assistant_probing/: .gitignore  README.md  __init__.py  axis_download.py  label_tests.ipynb  linear_probe.py  projection.py  scenario_09.py  test.ipynb
notebooks/example_activation/: 3aa8491e-bb42-408f-a549-2657361a304d.npz  manifest.json
notebooks/gpu_test/: load_qwen3_32b_example.ipynb
notebooks/moltbook_data/: explore_moltbook.ipynb
notebooks/scenario_runner/: README.md  TREATMENT_CONTENT_SPEC.md  agent_loop.py  agent_run.ipynb  agent_run_contaminated.ipynb  agent_run_contaminated_run2.ipynb  (+5 more)
scenario-generation/: generate_scenarios.py  judge_posts.py  test.ipynb  used_ids.json
scenarios/: README.md
scorer/: README.md  __init__.py  auditor.py  enrich.py  scenario_08.py  scenario_09.py  schema.py
scripts/: check_feed_guard.py  comment_session.py  generate_example_run.py  run_scenario_03_batch.sh  run_scenario_06_batch.sh  run_scenario_09_batch.sh  run_session.sh  smoke_shim.sh
shim/: capture.py  main.py
tests/: conftest.py  test_agent_loop.py  test_capture_guard.py  test_parity.py  test_scenario_tools.py  test_schema.py  test_scorer.py  test_telemetry.py
tools/: telemetry.py  validate_run.py
(+536 files in other folders)
