[project]
name = "pinchguard"
version = "0.1.0"
description = "Passive black-box behavioural predictor for alignment drift (Concern A: data logging + schema)."
requires-python = ">=3.11"
dependencies = [
    "inspect-ai>=0.3.50",
    "fastapi",
    "uvicorn",
    "pydantic>=2",
    "aiosmtpd",
    "httpx",
    "numpy",
]

[project.optional-dependencies]
capture = [
    "torch",
    "transformers",
    "accelerate",
    "nnsight",
    "nnterp",
    "bitsandbytes==0.49.2",
]
assistant_probing = [
    "torch",
    "huggingface_hub",
]
analysis = [
    "scikit-learn",
    "polars",
    "matplotlib",
]
dev = [
    "pytest>=8",
]
notebooks = [
    "datasets>=5.0.0",
    "fastparquet>=2026.5.0",
    "huggingface-hub>=1.16.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.8",
    # The agent_run notebook drives the shim through Inspect's `openai-api`
    # provider, which requires the OpenAI client library.
    "openai",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
